--- a/css/styles.css
+++ b/css/styles.css
@@ -175,3 +175,11 @@ body {
         margin-right: 6.3rem;
     }
 }
+
+/* .attribution {
+    font-size: 11px;
+    text-align: center;
+  }
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  } */
