--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
     height: 956px;
     width: 375px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
